# differential_drive

./: CMakeLists.txt  INFO.md  MIlESTONES.md  PROGRESS.md  QUESTIONS.md  README.md  package.xml
application/: CMakeLists.txt  package.xml
application/include/: controller.hpp  lqr.hpp  potential_field.hpp
application/src/control/: controller.cpp  lqr.cpp  potential_field.cpp  wrap_angle.cpp
bringup/: package.xml
bringup/launch/: diff_drive.launch.py  rrbot_setup.launch.py
description/models/diff_drive/: model.sdf
gazebo/include/gazebo/: FullSystem.hh
gazebo/worlds/: diff_drive.sdf
launch/: diff_drive_launch.py
ros_gz_example_application/: CMakeLists.txt  package.xml
ros_gz_example_application/include/: controller.hpp  pid.hpp  wrap_angle.hpp
ros_gz_example_application/src/control/: controller.cpp  perception.cpp  pid.cpp  velocity.cpp  wrap_angle.cpp
ros_gz_example_bringup/launch/: diff_drive.launch.py
ros_gz_example_gazebo/: CMakeLists.txt  README.md  package.xml
ros_gz_example_gazebo/include/gazebo/: BasicSystem.hh
ros_gz_example_gazebo/worlds/: diff_drive.sdf
ros_gz_project_template/ros_gz_example_application/: CMakeLists.txt  package.xml
ros_gz_project_template/ros_gz_example_application/src/control/: perception.cpp  velocity.cpp
ros_gz_project_template/ros_gz_example_bringup/launch/: diff_drive.launch.py
ros_gz_project_template/ros_gz_example_gazebo/worlds/: diff_drive.sdf
